src/css/fonts.css
@font-face {
  font-family: 'Edit Undo Brk';
  src: url('../fonts/edit-undo-brk-v2.woff2') format('woff2'),
       url('../fonts/edit-undo-brk-v2.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Edit Undo Line';
  src: url('../fonts/edit-undo-line-v1.woff2') format('woff2'),
       url('../fonts/edit-undo-line-v1.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

/* Override Bulma default font */
html, body {
  font-family: 'Edit Undo Brk', sans-serif !important;
}

